# platform.core.location.lbs-server

./: AUTHORS  CMakeLists.txt  Makefile.am  README.md  configure.ac  lbs-server.manifest
lbs-server/: CMakeLists.txt  Makefile.am  data_connection.c  debug_util.h  dump_log.c  gps_plugin_module.c  gps_plugin_module.h  last_position.c  last_position.h  lbs-server-plugin.pc.in  lbs-server.provider  lbs_server.c  lbs_server.h  nmea_logger.c  nmea_logger.h  nps_plugin_module.c  nps_plugin_module.h  org.tizen.lbs.Providers.LbsServer.service.in  server.c  server.h  setting.c  setting.h
lbs-server/config/: lbs-server.conf
lbs-server/include/: gps_plugin_data_types.h  gps_plugin_extra_data_types.h  gps_plugin_intf.h  nps_plugin_intf.h
lbs-server/script/: dump_gps.sh  dump_lbs.sh  lbs-server  vconf-internal-location-keys.sh  vconf-location.sh
lbs-server/src/: data_connection.c  data_connection.h  debug_util.h  dump_log.c  dump_log.h  gps_plugin_module.c  last_position.c  last_position.h  lbs_server.c  lbs_server.h  nmea_logger.c  nps_plugin_module.c  server.c  server.h  setting.c  setting.h
module/: CMakeLists.txt  Makefile.am  fused_module.c  gps_module.c  log.h  mock_module.c  nps_module.c  passive_module.c
packaging/: fused-location.service  fused-location.spec  lbs-server.changes  lbs-server.manifest  lbs-server.service  lbs-server.spec
src/client/: CMakeLists.txt  FusedLocation.cpp  FusedLocation.h  fused-location-client.pc.in  fused-location.cpp  fused-location.h  main.cpp
src/common/: CMakeLists.txt  DebugBreak.h  Logger.cpp  Logger.h  LoggerConfig.h  MathExt.h  Result.h  Utils.cpp  Utils.h  logger.hpp  utils.cpp  utils.hpp
src/core/: AccelerationReceiver.h  CMakeLists.txt  Earth.h  Engine.cpp  Engine.h  IntervalReceiver.h  LPFilter.cpp  LPFilter.h  MotionDetector.cpp  MotionDetector.h  PositionReceiver.h  Types.h  engine.cpp  engine.hpp  interval-receiver.hpp  position-receiver.hpp  types.hpp
src/ipc/: CMakeLists.txt  Client.cpp  Client.h  Common.h  DBusError.h  Exception.h  Server.cpp  Server.h  client.cpp  client.hpp  common.hpp  dbus-error.hpp  exception.hpp  org.tizen.lbs.Providers.FusedLocation.xml  server.cpp  server.hpp
src/server/: AccelerometerController.cpp  AccelerometerController.h  CMakeLists.txt  ClientNode.cpp  ClientNode.h  Exception.h  GPSController.cpp  GPSController.h  Server.cpp  Server.h  Service.cpp  Service.h  client-node.cpp  client-node.hpp  exception.hpp  gps-controller.cpp  gps-controller.hpp  server.cpp  server.hpp  service.cpp  service.hpp
src/server-exe/: CMakeLists.txt  main.cpp
tests/manual/accelerometer/: CMakeLists.txt  accelerometer.cpp
tests/manual/pyclient/: __init__.py  client.py
tests/ut/: CMakeLists.txt  main.cpp
tests/ut/core/: BipedalAcceleration.cpp  BipedalAcceleration.h  LPFilterTest.cpp  LPFilterTest.h  MotionDetectorTest.cpp  MotionDetectorTest.h
tests/ut/ipc/: Server.cpp  Server.h  server.cpp  server.hpp
tests/ut/server/: ClientNode.cpp  client-node.cpp
