CMAKE_MINIMUM_REQUIRED(VERSION 2.0)
PROJECT(client C)

SET(gps_module "gps")
SET(nps_module "wps")
SET(mock_module "mock")
SET(passive_module "passive")

SET(CLIENT_SRCS_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
SET(module_pkgs_LDFLAGS "${module_pkgs_LDFLAGS} -ldl")
SET(MODULE_EXTRA_CFLAGS "${MODULE_EXTRA_CFLAGS} -D_GNU_SOURCE")

ADD_LIBRARY(${gps_module} SHARED ${CLIENT_SRCS_DIR}/gps_module.c)
TARGET_LINK_LIBRARIES(${gps_module} ${module_pkgs_LDFLAGS})
SET_TARGET_PROPERTIES(${gps_module} PROPERTIES VERSION ${FULLVER} SOVERSION ${MAJORVER} CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(${gps_module} PROPERTIES COMPILE_FLAGS ${MODULE_EXTRA_CFLAGS})

INSTALL(TARGETS ${gps_module} DESTINATION ${LIB_DIR}/location/module)

IF (ENABLE_WPS)
	SET(nps_module "wps")
	ADD_LIBRARY(${nps_module} SHARED ${CLIENT_SRCS_DIR}/nps_module.c)
	TARGET_LINK_LIBRARIES(${nps_module} ${module_pkgs_LDFLAGS})
	SET_TARGET_PROPERTIES(${nps_module} PROPERTIES VERSION ${FULLVER} SOVERSION ${MAJORVER} CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(${nps_module} PROPERTIES COMPILE_FLAGS ${MODULE_EXTRA_CFLAGS})

	INSTALL(TARGETS ${nps_module} DESTINATION ${LIB_DIR}/location/module)
ENDIF (ENABLE_WPS)

ADD_LIBRARY(${mock_module} SHARED ${CLIENT_SRCS_DIR}/mock_module.c)
TARGET_LINK_LIBRARIES(${mock_module} ${module_pkgs_LDFLAGS})
SET_TARGET_PROPERTIES(${mock_module} PROPERTIES VERSION ${FULLVER} SOVERSION ${MAJORVER} CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(${mock_module} PROPERTIES COMPILE_FLAGS ${MODULE_EXTRA_CFLAGS})

INSTALL(TARGETS ${mock_module} DESTINATION ${LIB_DIR}/location/module)

ADD_LIBRARY(${passive_module} SHARED ${CLIENT_SRCS_DIR}/passive_module.c)
TARGET_LINK_LIBRARIES(${passive_module} ${module_pkgs_LDFLAGS})
SET_TARGET_PROPERTIES(${passive_module} PROPERTIES VERSION ${FULLVER} SOVERSION ${MAJORVER} CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(${passive_module} PROPERTIES COMPILE_FLAGS ${MODULE_EXTRA_CFLAGS})

INSTALL(TARGETS ${passive_module} DESTINATION ${LIB_DIR}/location/module)
